<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Action bar-->

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/main_tool_bar"
        android:layout_height="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--Shadow view-->
    <View
        android:id="@+id/gradientShadow"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/toolbar_shadow"
        />
        <!--Show when connect to the database-->
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_progress_bar"
            android:visibility="invisible"
            android:layout_gravity="center_vertical"
            style="@android:style/Widget.ProgressBar"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            />
    <!--Recycler View-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        />

        <android.support.design.widget.FloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="bottom|end"
            android:id="@+id/main_floating_action_button"
            android:src="@drawable/add_16"/>



    </FrameLayout>

</LinearLayout>
